[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2,<8", 'setuptools_scm_git_archive']

[tool.isort]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
profile = "black"
skip_gitignore = true
default_section = "THIRDPARTY"
known_first_party = "pyspectral"
line_length = 120
